--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,10 @@ body {
   transition: all 0.2s ease;
 }
 
+.timer-numbers {
+  transition: all 0.3s ease;
+}
+
 @media (min-width: 800px) {
   
   .container-button {
