--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .flex {
   display: flex;
+  transition: all 0.3s ease;
 }
 
 body {
@@ -68,6 +69,7 @@ body {
 
 .timer-numbers {
   transition: all 0.3s ease;
+  font-size: 2rem;
 }
 
 @media (min-width: 800px) {
